cabal-version:      3.4
name:               plutus-buoy
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             Your name
maintainer:         Your email

data-files:

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    default-extensions: LambdaCase
                        OverloadedStrings
                        StandaloneDeriving
                        NoImplicitPrelude
                        ImportQualifiedPost
                        TemplateHaskell
                        RecordWildCards
                        DataKinds
                        NamedFieldPuns
                        TypeApplications
                        ScopedTypeVariables
                        TypeFamilies
                        MultiParamTypeClasses
                        DeriveGeneric
                        DeriveAnyClass
                        DerivingStrategies
                        FlexibleInstances
                        BlockArguments
                        TupleSections
                        DuplicateRecordFields
                        InstanceSigs
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -- Fixes bugs like "GHC Core to PLC plugin: Reference to a name which is not a local, a builtin, or an external INLINABLE function: foldMap OtherCon []"
      -- E.g. https://github.com/input-output-hk/plutus/issues/4045
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-specialise
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      PlutusBuoy.Plutus.Test
      PlutusBuoy.Address
      PlutusBuoy.Plutus.FromBS
      PlutusBuoy.Plutus.Crypto

      PlutusBuoy.Plutus.V1.Common
      PlutusBuoy.Plutus.V2.Common
      PlutusBuoy.Plutus.V1.Contexts
      PlutusBuoy.Plutus.V2.Contexts
      PlutusBuoy.Plutus.V2.ToBBS

      PlutusBuoy.Plutus.ByteString
      PlutusBuoy.Plutus.Common
      PlutusBuoy.Plutus.List
      PlutusBuoy.Plutus.Maybe
      PlutusBuoy.Plutus.Monad
      PlutusBuoy.Plutus.Sort
      PlutusBuoy.Plutus.Tuple
      PlutusBuoy.Plutus.Validator
      PlutusBuoy.Plutus.Value
    other-modules:
    build-depends:
      base >= 4.9 && < 5,
      aeson,
      bytestring,
      containers,
      freer-extras,
      playground-common,
      plutus-contract,
      plutus-ledger,
      plutus-ledger-api,
      plutus-ledger-constraints,
      plutus-script-utils,
      plutus-tx,
      plutus-tx-plugin,
      text,
      lens,
      plutus-core,
      data-default,
      serialise,
      cardano-api,
      composition-prelude,
      bech32,
      base16-bytestring,
      extra,
      yesod-core >= 1.6.1.2 && < 1.7,
      yesod >= 1.6.2 && < 1.7,
      semialign,
      these,
      ghc-prim
    hs-source-dirs: src
